Added MakerBus reset circuit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 *~
-*.svg
-*.g??
-*.ps
-*.drl
-*.zip
+*.000
 *.bak
 *-bak
-*.net
-*.000
-*.pdf
+*.dcm
+*.drl
+*.g??
 *.jpg
+*.net
+*.ps
+*.pdf
+*.svg
+*.zip
 ?savepcb.brd
 avrdude*
 rev_b_old
